// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Encharge's createUpdateObject destination action: all fields 1`] = `
Object {
  "object": "r%3l9EB#Tn!sbzcr#",
  "objectData": Object {
    "externalId": "r%3l9EB#Tn!sbzcr#",
    "id": "r%3l9EB#Tn!sbzcr#",
    "testType": "r%3l9EB#Tn!sbzcr#",
  },
  "type": "group",
  "user": Object {
    "email": "tatodu@ful.yt",
    "userId": "r%3l9EB#Tn!sbzcr#",
  },
}
`;

exports[`Testing snapshot for Encharge's createUpdateObject destination action: required fields 1`] = `
Object {
  "object": "r%3l9EB#Tn!sbzcr#",
  "objectData": Object {
    "id": "r%3l9EB#Tn!sbzcr#",
  },
  "type": "group",
  "user": Object {},
}
`;
